--- a/readme.org
+++ b/readme.org
@@ -20,6 +20,10 @@ surface appear to be related at all. I think they are, but that might change.
    without ever forgetting that they're provisional likely bound for the
    chopping block.
 
+   Note that Bateson said to use anglo saxon words for partially formed concepts
+   and resist the urge to coin new greek or latin logisms. I like to use
+   nonsense words or pet names. It keeps me honest.
+
    (Cf. his notion of ~ethos~, Experiments in Thinking about Observed
    Ethnological Material)
 ** What is this?
@@ -28,7 +32,7 @@ surface appear to be related at all. I think they are, but that might change.
    problems is it intended to solve? What novelty does it introduce? Why do I
    bother putting so much time into organising these fractured thoughts?
 
-   These are all hard questions and I don't have hard answers as of yet. I'm thus
+   These are all hard questions and I don't have answers as of yet. I'm thus
    forced to resort to a collage of sorts...
 *** Perspective: Coordination Languages
     Cf https://dl.acm.org/doi/10.1145/129630.129635
@@ -596,10 +600,50 @@ surface appear to be related at all. I think they are, but that might change.
 
      This is obfuscated because compilers are generally executables, which just
      means that the operating system knows how to interpret them.
-
+*** Holons and Holarchy
 * A Language to Play with Theories
 ** Desiderata
    What do I want from an ideal language for playing with computing machinery?
+*** Residential
+    It's not a language I want, per se, it's an environment. A tightly coupled
+    system of language-editor-tools that could potentially replace both emacs
+    and the web browser.
+*** Self sandboxing
+    If units of execution are permitted no side effect, no mutations, no
+    syscalls, no i/o except the arguments they recieve (as messages) and the
+    messages they emit, then a runtime can look at (a subset of) a program and
+    know what data can enter it, and where data leaving it might go.
+
+    Thus a sandbox is just a program that runs another program (akin to a macro)
+    which restricts access to certain information, or prevents leakage to
+    untrusted locations.
+
+    I'm mixing notions from service meshes into the program logic. But
+    programming istio is an unmitigated clusterfuck, so if you can get those
+    kinds of benefits using application code, and maintain the same boundaries
+    between concerns, why shouldn't you?
+
+    The ideal end state is to get a level of sandboxing that we can trust are as
+    isolated as k8s pods but are (potentially) running in the same memory
+    space.
+
+    That will open up the door to using untrusted third party code safely, and
+    more generally remixing applications freely: if I want to use code that
+    assumes it's running in some specific context, I can mock that context and
+    use the code in ways it was never intended to be.
+
+    This is getting into potentially litigious territory, but I want to be able
+    to override the default behaviour of apps on my phone without touching their
+    source code. I want to be able to take a component from site A, another from
+    site B, and a third of my own and combine them into a dashboard to suit my
+    own purposes. Liberty is control over your own life.
+*** Fully reflective
+    Think Emacs, complete with the ability to override `self-insert-command` and
+    brick everything.
+
+    That brings up some interesting questions about undo (should you be allowed
+    to break undo? can that be undone? how?) or at least restarting from a known
+    state.
 ** Skepticism
    Which structures and patterns are useful, and which are just habit?
 *** Dynamic Linking
@@ -645,6 +689,71 @@ surface appear to be related at all. I think they are, but that might change.
 
     That sounds horrible, but is it worse than changing those 7000 loc and not
     even knowing it?
+*** Types
+    There are two ways in which the word "type" is used in programming.
+
+    The first are the types in C, llvm, etc. which are just tags on chunks of
+    bits. Given two machine words, how do you know that one is to be interpreted
+    an an interger and the other as a sequence of unicode characters? You
+    don't. To the hardware they're just words.
+
+    The semantics (A is a long, B is a double) are separate from the syntax (the
+    bitseqs themselves) by design. That was the entire goal of the Hilbertian
+    formalist program, after all.
+
+    But the idea that these types (semantics) need to be static is incidental
+    baggage we're still carrying from the days when machine code had to be
+    stored on and read off of punch cards, or a drum; there simply wasn't space
+    to store words about words.
+
+    It's not especially hard to write a program that looks at pairs of words and
+    has a hard coded semantics — definitions must end somewhere — that uses the
+    first word to know what to do with the second dynamically at runtime. It
+    would double the size of the program in memory, but for many applications
+    that's a non-issue.
+
+    JIT compiling makes the proposition even simpler. As long as the runtime can
+    figure out what words mean before passing code to the JIT, then the actual
+    machine code being executed can be incredibly fast (this, and heavy caching,
+    is the secret to Julia's impressive performance).
+
+    The other use of "types" is to refer to type systems of the Hindley-Milner
+    variety, and their descendents.
+
+    These, frankly, don't interest me. Gödel showed that no such system can ever
+    be expressive enough to encompass arithmetic, let alone the things I want to
+    work with.
+
+    The retort to Gödel currently in vogue is that any Gödelian proposition can
+    be added to the system so that we can create a tower via iteration
+    expressing whatever we want to express (this argument is ignorant of
+    transfinite set theory, but let's leave that aside for now), thus solving
+    incompleteness.
+
+    Furthermore, consistency can be achieved via a tower of meta languages,
+    where each one proves the one below it to be consistent (assuming it itself
+    is consistent). This is an induction argument that can never have a base
+    case, so it's fallacious, but in practice it actually works out pretty
+    well. The meta languages get simpler and simpler until we're convinced they
+    have to be consistent (or sometimes we can prove them consistent by other
+    means).
+
+    This is a lot of work. It's so much work that most people don't bother to do
+    it properly. And if you're writing software whose greatest danger is
+    someone's web browser crashing, it's simply not worth the effort.
+
+    Don't get me wrong, if you're writing air traffic control software, or an
+    autopilot for a car, you'd damn well better prove your software correct.
+
+    But that's a small fraction of software, for most programs, proofs of
+    correctness amount to Adams' 42.
+
+    I'm also not convinced that logic is the most effective way to prove
+    programs correct. In no other endeavour is logic used to construct proofs.
+    Logic is a method of formalising proofs that already exist. And "formal" is
+    a target that has been moving for over 5000 years.
+
+    But I don't have anything better as of yet.
 *** The Stack
     The modern callstack and the prevalence of stack machines when defining
     languages has its origin in Dijkstra's Notes on Structured Programming
@@ -948,8 +1057,10 @@ surface appear to be related at all. I think they are, but that might change.
 **** references
      Dijkstra (find the essay)
      Bird, constructive programming
+* References
+ - [[https://ia802307.us.archive.org/7/items/bitsavers_xeroxinternceManualOct1983_52302609/Interlisp_Reference_Manual_Oct_1983.pdf][Interlisp Reference Manual]]
+ - [[https://dl.acm.org/doi/10.1145/592849.592858][Getting Erlang to Talk to the Outside World]]
 * Potentially Useful Reading
  - https://arxiv.org/abs/2206.01041
- - [[https://ia802307.us.archive.org/7/items/bitsavers_xeroxinternceManualOct1983_52302609/Interlisp_Reference_Manual_Oct_1983.pdf][Interlisp Reference Manual]]
 * Copyright
   © 2022 Thomas Getgood
