First class bitstrings are going to simplify the lower level.
High level operations on machine code. I like that. Being able to destructure
structs that don't correspond to anything compiled in our codebase will be
important for interop. How else are you going to read a specification at runtime
and figure out how to read an incoming binary data stream on the fly?

--- a/readme.org
+++ b/readme.org
@@ -757,7 +757,8 @@ surface appear to be related at all. I think they are, but that might change.
 *** The Stack
     The modern callstack and the prevalence of stack machines when defining
     languages has its origin in Dijkstra's Notes on Structured Programming
-    (1970).
+    (1970). (Cf. ALGOL 60, Interlisp-D, Forth,... Dijkstra didn't invent the use
+    of stacks, but rather the modern paradigm of stack traces).
 
     Dijkstra's goal was to achieve a one to one correspondance between the text
     of the program and the instructions being executed in the hardware. He
